@@ -119,8 +119,12 @@ var Channel = function(name, Server) {
         self.ipkey += "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"[parseInt(Math.random() * 65)]
     }
 
-    Server.db.loadChannelData(self, function () {
-        self.dbloaded = true;
+    Server.db.loadChannelData(self, function (err) {
+        if (err && err === "channel_dead")
+                return;
+        else if (!err || err === "channel_unregistered")
+            self.dbloaded = true;
+
         if(self.registered) {
             self.loadDump();
         }
@@ -150,6 +154,9 @@ Channel.prototype.loadDump = function() {
         return;
     fs.stat(path.join(__dirname, "../chandump", self.name),
             function (err, stats) {
+        if (self.dead)
+            return;
+
         if(!err) {
             var mb = stats.size / 1048576;
             mb = parseInt(mb * 100) / 100;
@@ -165,6 +172,9 @@ Channel.prototype.loadDump = function() {
         }
         fs.readFile(path.join(__dirname, "../chandump", self.name),
                     function(err, data) {
+            if (self.dead)
+                return;
+
             if(err) {
                 if(err.code == "ENOENT") {
                     Logger.errlog.log("WARN: missing dump for " + self.name);
