@@ -405,7 +405,12 @@ Database.prototype.loadChannelData = function (chan, callback) {
         }
 
         if(res.length == 0) {
-            callback("Channel is unregistered", null);
+            callback("channel_unregistered", null);
+            return;
+        }
+
+        if (chan.dead) {
+            callback("channel_dead", null);
             return;
         }
 
@@ -416,6 +421,11 @@ Database.prototype.loadChannelData = function (chan, callback) {
         // Load bans
         query = "SELECT * FROM `chan_" + chan.name + "_bans`";
         self.query(query, function (err, res) {
+            if (chan.dead) {
+                callback("channel_dead", null);
+                return;
+            }
+
             if(err) {
                 callback(err, null);
                 return;
