@@ -59,14 +59,26 @@ function Playlist(chan) {
     this.server = chan.server;
     var pl = this;
     this.on("mediaUpdate", function(m) {
+        if (chan.dead) {
+            pl.die();
+            return;
+        }
         chan.sendAll("mediaUpdate", m.timeupdate());
     });
     this.on("changeMedia", function(m) {
+        if (chan.dead) {
+            pl.die();
+            return;
+        }
         chan.onVideoChange();
         chan.sendAll("setCurrent", pl.current.uid);
         chan.sendAll("changeMedia", m.fullupdate());
     });
     this.on("remove", function(item) {
+        if (chan.dead) {
+            pl.die();
+            return;
+        }
         chan.broadcastPlaylistMeta();
         chan.sendAll("delete", {
             uid: item.uid
