@@ -62,8 +62,11 @@ var Server = {
                 break;
             }
         }
-        chan.name = "";
-        chan.canonical_name = "";
+        var keys = Object.keys(chan);
+        for (var i in keys) {
+            delete chan[keys[i]];
+        }
+        chan.dead = true;
     },
     stats: null,
     app: null,
